[package]
name = "rpi-fs-shrink"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
nix = { version = "0.29", features = ["mount", "ioctl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[[bin]]
name = "rpi-fs-shrink"
path = "src/main.rs"
