[package]
name = "rpi_resize
version = "0.1.0"
edition = "2024"
authors = ["greenpdx"]
description = "Shrink Raspberry Pi root filesystem and create additional partitions for swap, /var, and /home"
license = "MIT"
repository = "https://github.com/greenpdx/crpart"
readme = "README.md"
keywords = ["raspberry-pi", "partition", "filesystem", "resize", "linux"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
nix = { version = "0.29", features = ["mount", "ioctl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[[bin]]
name = "rpi-fs-shrink"
path = "src/main.rs"
